# ameritrade-python

./: .flake8  .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
ameritrade/: auth.py  history.py  quotes.py  settings.py  stock.py  utils.py
