[tool.poetry]
name = "ameritrade-python"
version = "0.1.0"
description = "A python wrapper for the Ameritrade API."
authors = ["Kyler Roloff"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
