[tool.poetry]
name = "ameritrade-python"
version = "0.1.2"
description = "A python wrapper for the Ameritrade API."
readme = "README.md"
repository = "https://github.com/fisher60/ameritrade-python"
authors = ["Kyler Roloff"]
license = "MIT"
packages = [
    { include = "ameritrade" },
]

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.7.3"
dataclass-factory = "^2.10"

[tool.poetry.dev-dependencies]
python-dotenv = "^0.15.0"
poetry = "^1.1.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
